@@ -6,19 +6,22 @@
 </head>
 <body>
 
-<!--{chapter OVERLOADED show_examples         => EXPAND,
-                        show_diagnostics      => EXPAND,
-                        show_sub_descriptions => ALL
+<!--{chapter OVERLOADED
+        show_examples         => EXPAND,
+        show_diagnostics      => EXPAND,
+        show_sub_descriptions => ALL
     }-->
 
-<!--{chapter METHODS    show_examples         => EXPAND,
-                        show_diagnostics      => EXPAND,
-                        show_sub_descriptions => ALL
+<!--{chapter METHODS
+        show_examples         => EXPAND,
+        show_diagnostics      => EXPAND,
+        show_sub_descriptions => ALL
     }-->
 
-<!--{chapter FUNCTIONS  show_examples         => EXPAND,
-                        show_diagnostics      => EXPAND,
-                        show_sub_descriptions => ALL
+<!--{chapter FUNCTIONS
+        show_examples         => EXPAND,
+        show_diagnostics      => EXPAND,
+        show_sub_descriptions => ALL
     }-->
 
 </body>
